--- a/project/static/package.json
+++ b/project/static/package.json
@@ -65,6 +65,7 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.14.0",
+    "webpack-bundle-tracker": "^0.2.0",
     "webpack-dev-server": "^1.16.2",
     "whatwg-fetch": "^2.0.1"
   },
