--- a/project/static/package.json
+++ b/project/static/package.json
@@ -16,10 +16,13 @@
     "bootstrap": "^4.0.0-alpha.5",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
+    "formsy-material-ui": "^0.5.3",
+    "formsy-react": "^0.18.1",
     "http": "0.0.0",
     "isomorphic-fetch": "^2.2.1",
     "jade": "^1.11.0",
     "jquery": "^3.1.1",
+    "lodash": "^4.17.4",
     "material-ui": "^0.16.6",
     "mobx": "^2.2.2",
     "mobx-react": "^3.3.1",
@@ -30,13 +33,15 @@
     "passport-vkontakte": "^0.3.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-dynamic-modal": "^1.1.1",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
     "react-swipeable-views": "^0.10.3",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
-    "singleton": "^1.0.0"
+    "singleton": "^1.0.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
