--- a/project/static/package.json
+++ b/project/static/package.json
@@ -33,6 +33,7 @@
     "passport-vkontakte": "^0.3.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-dropzone": "^3.10.0",
     "react-dynamic-modal": "^1.1.1",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
