--- a/project/static/.babelrc
+++ b/project/static/.babelrc
@@ -4,5 +4,5 @@
     "react",
     "stage-0"
   ],
-  "plugins": ["transform-decorators-legacy", "react-hot-loader/babel"]
+  "plugins": ["transform-decorators-legacy"]
 }
