--- a/project/static/package.json
+++ b/project/static/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "lint": "node_modules/.bin/eslint src/** --ext .js,.jsx",
-    "watch": "node_modules/.bin/webpack --progress --watch",
-    "build:dev": "node_modules/.bin/webpack --env=dev --progress --profile --colors",
-    "build:dist": "node_modules/.bin/webpack --env=prod --progress --profile --colors",
+    "watch": "node_modules/.bin/webpack --progress --watch --colors --config ./webpack.dev.config.js",
+    "build:dev": "node_modules/.bin/webpack --progress --colors --config ./webpack.dev.config.js",
+    "build:prod": "node_modules/.bin/webpack -p --progress --colors --config ./webpack.prod.config.js",
     "server:dev": "webpack-dev-server --progress --colors --inline --content-base ./dist",
     "start": "npm run watch",
     "flow": "flow; test $? -eq 0 -o $? -eq 2"
@@ -47,12 +47,13 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "babel-core": "^6.21.0",
+    "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
+    "babel-plugin-transform-async-to-generator": "^6.22.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-polyfill": "^6.20.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
