--- a/project/static/package.json
+++ b/project/static/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^15.4.1",
     "react-dropzone": "^3.10.0",
     "react-dynamic-modal": "^1.1.1",
+    "react-geosuggest": "^2.1.0",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
